2004-11-03  Not Zed  <NotZed@Ximian.com>

	* em-folder-view.c (emfv_popup): Fix the popup id.
	
2004-11-03  Not Zed  <NotZed@Ximian.com>

	* em-folder-view.c (emfv_list_done_message_selected): revert
	jeff's last change - we do actually want to know when we couldn't
	load a message.  the crash he was fixing was fixed elsewhere.
	also fix the unref ordering stuff.

	* em-format-html.c (efh_format_timeout): removed the fixme i
	added.

2004-11-01  Not Zed  <NotZed@Ximian.com>

	** See bug #67496.

	* em-format-html.c (efh_text_html): use the base on the emformat
	to calculate our absolute iframe uri.
	(efh_multipart_related): same as emf_multipart_related.

	* em-format.c (emf_multipart_related): remove content-location
	handling, now done in format_part_as.
	(em_format_part_as): track content-base (& absolute
	content-location) of all parts here.

2004-11-02  Not Zed  <NotZed@Ximian.com>

	* em-event.c (eme_target_free, em_event_target_new_message):
	handle NULL folder or message.

2004-11-02  Jeffrey Stedfast  <fejj@novell.com>

	* em-folder-view.c (emfv_list_done_message_selected): Check for
	NULL messages (happens if the message isn't available).

2004-11-02  Radek Doulik  <rodo@ximian.com>

	* em-format-html.c: replace 3 nested html tables used to create
	this gray border around parts content with div block with border
	style
	use shorthand border: property

2004-11-01  Jeffrey Stedfast  <fejj@novell.com>

	* em-account-editor.c: Change the labels back to the same as they
	were in 2.0

2004-10-28  Not Zed  <NotZed@Ximian.com>

	* mail-folder-cache.c (real_flush_updates): 
	* em-message-browser.c (em_message_browser_new): 
	* em-mailer-prefs.c (em_mailer_prefs_construct): 
	* em-format-html-display.c (efhd_attachment_popup): 
	* em-folder-view.c (emfv_popup, emfv_list_done_message_selected) 
	(emfv_format_popup_event): 
	* em-folder-tree.c (emft_popup): 
	* em-folder-properties.c (emfp_dialog_got_folder): 
	* em-folder-browser.c (em_folder_browser_new): 